examples/showcase/deploy/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: showcase
  labels:
    app: showcase
    environment: production
