examples/showcase/deploy/kubernetes/05-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: showcase-metrics
  namespace: showcase
  labels:
    app: showcase
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app: showcase
